--- a/_codeventures/index.html
+++ b/_codeventures/index.html
@@ -219,7 +219,7 @@
                   </div>
                 </div>
                 <div class="text-center rounded-md">
-                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="https://via.placeholder.com/600/FFFFFF/000000/?text=Your%20Photo%20Here" />
+                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="images/advisors/aadi.jpg" />
                   <div class="w-full">
                     <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">Aadi Garg</a>
                     <h3 class="mt-2 text-gray-400">
@@ -230,7 +230,7 @@
                   </div>
                 </div>
                 <div class="text-center rounded-md">
-                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="https://via.placeholder.com/600/FFFFFF/000000/?text=Your%20Photo%20Here" />
+                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="" />
                   <div class="w-full">
                     <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">TBH</a>
                     <h3 class="mt-2 text-gray-400">
@@ -255,9 +255,9 @@
             </div>
           </div>
           <footer class="py-8 mx-4">
-            <p class="text-center text-[#70757E]">Made by 
+            <p class="text-center text-[#70757E]">
               <!-- -->
-              <a href="https://rahulthennarasu.github.io/rahul-digfolio/" class="underline">Rahul</a>
+              <a href="https://rahulthennarasu.github.io/rahul-digfolio/" class="underline"></a>
               <!-- -->
               <a href="" class="underline">Copyright © 2024 Codeventures. All Rights Reserved.</a>
               <!-- -->
