--- a/_codeventures/index.html
+++ b/_codeventures/index.html
@@ -51,6 +51,8 @@
   <body class="bg-[#04040A]">
     <div id="__next">
       <main class="__className_030150">
+        <div id="container3D"></div>
+        <script type="module" src="main.js"></script>
         <div class="h-full">
           <div class="flex flex-col max-w-5xl px-4 mx-auto sm:px-8 md:max-w-6xl">
             <header class="flex items-center justify-between h-24 animate-header-slide-down-fade">
@@ -109,13 +111,13 @@
               <div class="transition duration-500 ease-in-out transform scale-100 translate-x-0 translate-y-0 opacity-100">
                 <div class="md:text-center">
                   <span class="text-[#7D97E1] my-2 bg-[#0d1723] inline-flex h-6 cursor-default select-none items-center whitespace-nowrap rounded-full px-2 text-xs">Process</span>
-                  <h1 class="mb-4 text-3xl font-medium text-gray-100 md:text-5xl">How it works</h1>
-                  <h2 class="max-w-2xl mx-auto text-lg md:text-xl text-gray-400/75">The Ethics in Computing Network seeks to find passionate
+                  <h1 class="mb-4 text-3xl font-medium text-gray-100 md:text-5xl">Codeventures Curriculum</h1>
+                  <h2 class="max-w-2xl mx-auto text-lg md:text-xl text-gray-400/75">Codeventures seeks to find passionate
                     <!-- -->
-                    <span class="text-transparent super-gradient-2 bg-clip-text">young scholars</span>
-                    <!-- -->interested in ethics and computer science, and funds a research project at the intersection of these two fields. Please note:
+                    <span class="text-transparent beige-gradient bg-clip-text">young individuals</span>
+                    <!-- -->interested in computer science, and develops a project at the intersection of this field to address real world problems. Please note:
                     <!-- -->
-                    <span class="text-transparent super-gradient-2 bg-clip-text">applications are accepted on a rolling basis.</span>
+                    <span class="text-transparent beige-gradient bg-clip-text">applications are accepted on a rolling basis.</span>
                   </h2>
                 </div>
               </div>
@@ -128,9 +130,9 @@
                     <div class="hidden sm:flex w-full bg-neutral-600 h-[1.25px]"></div>
                   </div>
                   <div class="mt-3 sm:pr-8">
-                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Application</h3>
+                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Registration</h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-gray-500">As soon as possible</time>
-                    <p class="text-base font-normal text-gray-400">You complete your application with rigorous information on a project surrounding AI and computing. Elibility is denoted on the form.</p>
+                    <p class="text-base font-normal text-gray-400">You complete the registration process with information about yourself in order to secure your spot in the program.</p>
                   </div>
                 </li>
                 <li class="relative mb-6 sm:mb-0">
@@ -141,9 +143,9 @@
                     <div class="hidden sm:flex w-full bg-neutral-600 h-[1.25px]"></div>
                   </div>
                   <div class="mt-3 sm:pr-8">
-                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Pairing</h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-gray-500">~1 month after submissions</time>
-                    <p class="text-base font-normal text-gray-400">Based on your project, you are matched with a mentor who is familiar with your research interest and can guide you. Funding is distributed.</p>
+                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Lessons</h3>
+                    <time class="block mb-2 text-sm font-normal leading-none text-gray-500">~2 months</time>
+                    <p class="text-base font-normal text-gray-400">You will be lectured on various topics in computer science ranging from how computers work to different programming languages, and important current topics such as ethical use of AI from professional mentors, special guests, and students.</p>
                   </div>
                 </li>
                 <li class="relative mb-6 sm:mb-0">
@@ -154,9 +156,9 @@
                     <div class="hidden sm:flex w-full bg-neutral-600 h-[1.25px]"></div>
                   </div>
                   <div class="mt-3 sm:pr-8">
-                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Completion</h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-gray-500">~2-3 months after pairing</time>
-                    <p class="text-base font-normal text-gray-400">With guidance from your mentor, you will complete your research project, culminating in a final paper detailing your research.</p>
+                    <h3 class="mb-2 text-lg font-semibold text-gray-100">Projects</h3>
+                    <time class="block mb-2 text-sm font-normal leading-none text-gray-500">~1-2 months during lessons</time>
+                    <p class="text-base font-normal text-gray-400">With guidance from your mentors, you will complete your final project, culminating from the lessons and topics we cover.</p>
                   </div>
                 </li>
                 <li class="relative mb-6 sm:mb-0">
@@ -169,7 +171,7 @@
                   <div class="mt-3 sm:pr-8">
                     <h3 class="mb-2 text-lg font-semibold text-gray-100">Presentation</h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-gray-500">At the end of the summer</time>
-                    <p class="text-base font-normal text-gray-400">All ECN scholars will present their research to a panel of AI and computing ethicists.</p>
+                    <p class="text-base font-normal text-gray-400">All students in tthe Codeventures program will present their projects they have created</p>
                   </div>
                 </li>
               </ol>
@@ -183,10 +185,10 @@
                   <h1 class="mb-4 text-3xl font-medium text-gray-100 md:text-5xl">Our mentors and educators</h1>
                   <h2 class="max-w-2xl mx-auto text-lg md:text-xl text-gray-400/75">Joining our program allows students to learn from experienced
                     <!-- -->
-                    <span class="text-transparent super-gradient-2 bg-clip-text">students</span>
+                    <span class="text-transparent green-gradient bg-clip-text">students</span>
                     <!-- -->and
                     <!-- -->
-                    <span class="text-transparent super-gradient-2 bg-clip-text">AI entrepreneurs</span>
+                    <span class="text-transparent green-gradient bg-clip-text">AI entrepreneurs and special guests</span>
                     <!-- -->. If you&#x27;d like to mentor or invest in Codeventures, please
                     <!-- -->
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMWvedzqatrHUD2w2aiRxDAx-z9I59KA2B-TZozG16c3YIyg/viewform?usp=sf_link" target="_blank" class="underline transition duration-150 hover:text-gray-400/90">fill out this form</a>.
@@ -248,7 +250,7 @@
               <h1 class="mb-6 text-3xl font-medium text-center text-white md:text-6xl">Explore <br class="sm:hidden" />
                 <span style="white-space:pre" class="sc-bcXHqe kdzCFU"></span>
               </h1>
-              <h2 class="max-w-2xl mx-auto mb-10 text-xl text-center text-white md:text-gray-200 md:text-2xl">Join a community of curious young scholars committed to making the world a better place through ethical AI.</h2>
+              <h2 class="max-w-2xl mx-auto mb-10 text-xl text-center text-white md:text-gray-200 md:text-2xl">Join a community of curious young individuals committed to making the world a better place through computer science.</h2>
               <div class="flex flex-wrap justify-center mb-10 -mt-4 space-y-4 pace-x-4">
                 <a class="md:mt-2 text-center text-gray-100 text-md md:text-xl font-semibold px-5 py-3 ease-in-out transform text-sm transition border-2 duration-400 hover:-translate-y-0.5 hover:text-gray-300 hover:border-gray-300 rounded-xl" href="#">Sign up for free</a>
               </div>
