--- a/_codeventures/index.html
+++ b/_codeventures/index.html
@@ -246,8 +246,8 @@
             </div>
           </section>
           <div class="max-w-full mx-auto">
-            <div class="px-10 py-14 md:py-32 md:text-center bg-cover bg-[url(&#x27;/images/gradient.png&#x27;)]">
-              <h1 class="mb-6 text-3xl font-medium text-center text-white md:text-6xl">Explore <br class="sm:hidden" />
+            <div class="px-10 py-14 md:py-32 md:text-center bg-cover bg-[url(&#x27;gradient.png&#x27;)]">
+              <h1 class="mb-6 text-3xl font-medium text-center text-white md:text-6xl">Explore<br class="sm:hidden" />
                 <span style="white-space:pre" class="sc-bcXHqe kdzCFU"></span>
               </h1>
               <h2 class="max-w-2xl mx-auto mb-10 text-xl text-center text-white md:text-gray-200 md:text-2xl">Join a community of curious young individuals committed to making the world a better place through computer science.</h2>
