--- a/_codeventures/index.html
+++ b/_codeventures/index.html
@@ -51,11 +51,13 @@
   <body class="bg-[#04040A]">
     <div id="__next">
       <main class="__className_030150">
-        <div id="container3D"></div>
         <div class="h-full">
           <div class="flex flex-col max-w-5xl px-4 mx-auto sm:px-8 md:max-w-6xl">
             <header class="flex items-center justify-between h-24 animate-header-slide-down-fade">
-              <a href="index.html" class="text-2xl font-bold text-white">Codeventures</a>
+              <a href="index.html" class="flex items-center text-2xl font-bold text-white">
+                <img src="images/logo.png" alt="Logo" style="width: 30px; height: auto; margin-right: 10px;">
+                <span>Codeventures</span>
+            </a>
               <div class="flex items-center gap-4">
                 <div class="relative group">
                   <div class="gradient-border"></div>
@@ -90,6 +92,7 @@
                     <path stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round" class="transition-all duration-200 origin-left opacity-0 group-hover:translate-x-0 group-hover:opacity-100 motion-safe:-translate-x-1"></path>
                   </svg>
                 </a>
+                <div id="container3D"></div>
                 <div class="mx-auto relative lg:block hidden lg:w-[585px] lg:h-[590px] animate-hero-text-slide-up-fade">
                   <canvas style="display:none"></canvas>
                 </div>
@@ -265,9 +268,10 @@
             </p>
           </footer>
         </div>
+        
       </main>
-      <script type="module" src="main.js"></script>
     </div>
+    <script type="module" src="js/main.js"></script>
     <script id="__NEXT_DATA__" type="application/json">
       {
         "props": {
