--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">Aadi Garg</a>
                     <h3 class="mt-2 text-gray-400">
                       <p>
-                        <span class="font-medium">Student</span>: Junior at Evergreen Valley High School 
+                        <span class="font-medium">Student</span>: Junior at Evergreen Valley High School (EVHS)
                       </p>
                     </h3>
                   </div>
@@ -236,10 +236,10 @@
                 <div class="text-center rounded-md">
                   <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="" />
                   <div class="w-full">
-                    <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">TBH</a>
+                    <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">TBA</a>
                     <h3 class="mt-2 text-gray-400">
                       <p>
-                        <span class="font-medium">New Mentor</span>: TBH
+                        <span class="font-medium">New Mentor</span>: TBA
                       </p>
                     </h3>
                   </div>
