--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <!-- -->to learn more about topics ranging from 
                   <!-- -->
                   <span class="text-transparent green-gradient bg-clip-text">programming languages to real world applications</span>
-                  <!-- -->with guidance students experienced with computer languages and machine learning.
+                  <!-- -->with guidance from students experienced with computer languages and machine learning.
                 </h2>
                 <h3 class="mb-8 text-lg animate-hero-text-slide-up-fade md:text-xl md:mx-16 text-gray-400/75">Codeventures is searching for 
                   <!-- -->
@@ -234,12 +234,12 @@
                   </div>
                 </div>
                 <div class="text-center rounded-md">
-                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="" />
+                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="images/advisors/owen.png" />
                   <div class="w-full">
-                    <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">TBA</a>
+                    <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">Owen Thomas</a>
                     <h3 class="mt-2 text-gray-400">
                       <p>
-                        <span class="font-medium">New Mentor</span>: TBA
+                        <span class="font-medium">Student</span>: Junior at Evergreen Valley High School (EVHS)
                       </p>
                     </h3>
                   </div>
