--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div class="mt-3 sm:pr-8">
                     <h3 class="mb-2 text-lg font-semibold text-gray-100">Presentation</h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-gray-500">At the end of the summer</time>
-                    <p class="text-base font-normal text-gray-400">All students in tthe Codeventures program will present their projects they have created</p>
+                    <p class="text-base font-normal text-gray-400">All students in the Codeventures program will present their projects they have created</p>
                   </div>
                 </li>
               </ol>
@@ -229,6 +229,17 @@
                     <h3 class="mt-2 text-gray-400">
                       <p>
                         <span class="font-medium">Student</span>: Junior at Evergreen Valley High School (EVHS)
+                      </p>
+                    </h3>
+                  </div>
+                </div>
+                <div class="text-center rounded-md">
+                  <img alt="Image of Your Name" class="flex-shrink-0 object-cover object-center w-full mb-4 rounded-lg h-80 md:h-60" src="images/advisors/karthick.png" />
+                  <div class="w-full">
+                    <a class="text-lg font-medium text-gray-200 underline transition duration-150 hover:text-gray-300/90 title-font" href="index.html">Karthik Kandaswamy</a>
+                    <h3 class="mt-2 text-gray-400">
+                      <p>
+                        <span class="font-medium">Student</span>: Junior at Silver Creek High School (SCHS)
                       </p>
                     </h3>
                   </div>
