--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from www.ethicsincomputing.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 27 May 2024 22:52:29 GMT -->
-  <!-- Added by HTTrack -->
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <!-- /Added by HTTrack -->
   <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -58,18 +55,32 @@
                 <img src="images/logo.png" alt="Logo" style="width: 30px; height: auto; margin-right: 10px;">
                 <span>Codeventures</span>
             </a>
-              <div class="flex items-center gap-4">
-                <div class="relative group">
-                  <div class="gradient-border"></div>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGH_0tjmtN6Gl0yb5qUJcSERhgk3smMfCsO4upA1Ea57VNlQ/viewform?usp=sf_link" target="_blank" class="relative inline-flex items-center h-10 gap-1 px-4 text-sm font-semibold bg-white border divide-x divide-gray-600 rounded-md hover:bg-white/90 focus:ring-2 focus:ring-black/20">Apply here <span class="text-[#70757E] animate-point-x">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M13.75 6.75L19.25 12L13.75 17.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                        <path d="M19 12H4.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                      </svg>
-                    </span>
-                  </a>
-                </div>
+            <div class="flex items-center gap-4">
+              <div class="relative group">
+                <div class="gradient-border"></div>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGH_0tjmtN6Gl0yb5qUJcSERhgk3smMfCsO4upA1Ea57VNlQ/viewform?usp=sf_link" target="_blank" class="relative inline-flex items-center h-10 gap-1 px-4 text-sm font-semibold bg-white border divide-x divide-gray-600 rounded-md hover:bg-white/90 focus:ring-2 focus:ring-black/20">
+                  Apply here 
+                  <span class="text-[#70757E] animate-point-x">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.75 6.75L19.25 12L13.75 17.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M19 12H4.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                  </span>
+                </a>
               </div>
+              <div class="relative group">
+                <div class="gradient-border"></div>
+                <a href="index-2.html" target="_blank" class="relative inline-flex items-center h-10 gap-1 px-4 text-sm font-semibold bg-white border divide-x divide-gray-600 rounded-md hover:bg-white/90 focus:ring-2 focus:ring-black/20">
+                  Our Curriculum
+                  <span class="text-[#70757E] animate-point-x">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.75 6.75L19.25 12L13.75 17.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M19 12H4.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
             </header>
             <div class="max-w-3xl mx-4 md:mx-auto">
               <div class="text-center">
@@ -83,9 +94,9 @@
                   <span class="text-transparent green-gradient bg-clip-text">programming languages to real world applications</span>
                   <!-- -->with guidance from students experienced with computer languages and machine learning.
                 </h2>
-                <h3 class="mb-8 text-lg animate-hero-text-slide-up-fade md:text-xl md:mx-16 text-gray-400/75">Codeventures is searching for 
+                <h3 class="mb-8 text-lg animate-hero-text-slide-up-fade md:text-xl md:mx-16 text-gray-400/75">Codeventures is open to
                   <!-- -->
-                  <span class="text-transparent beige-gradient bg-clip-text">brightest young talent</span>.
+                  <span class="text-transparent beige-gradient bg-clip-text">all who wish to learn</span>.
                 </h3>
                 <a href="#learn" class="z-10 group animate-hero-text-slide-up-fade inline-flex items-center gap-[0.25em] mb-8 lg:-mb-2 rounded-md bg-green px-4 py-1.5 text-lg font-medium text-white transition-colors duration-75 hover:bg-green">Learn more <svg viewBox="0 0 16 16" height="1em" width="1em" fill="none" xmlns="http:www.w3.org/2000/svg" class="relative transition-transform duration-200 group-hover:translate-x-0 motion-safe:-translate-x-1">
                     <path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path>
@@ -117,9 +128,9 @@
                   <h2 class="max-w-2xl mx-auto text-lg md:text-xl text-gray-400/75">Codeventures seeks to find passionate
                     <!-- -->
                     <span class="text-transparent beige-gradient bg-clip-text">young individuals</span>
-                    <!-- -->interested in computer science, and develops a project at the intersection of this field to address real world problems. Please note:
+                    <!-- -->interested in computer science, and develops a project at the intersection of this field to address real world problems. 
                     <!-- -->
-                    <span class="text-transparent beige-gradient bg-clip-text">applications are accepted on a rolling basis.</span>
+                    <span class="text-transparent beige-gradient bg-clip-text">No coding experience required.</span>
                   </h2>
                 </div>
               </div>
@@ -134,7 +145,7 @@
                   <div class="mt-3 sm:pr-8">
                     <h3 class="mb-2 text-lg font-semibold text-gray-100">Registration</h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-gray-500">As soon as possible</time>
-                    <p class="text-base font-normal text-gray-400">You complete the registration process with information about yourself in order to secure your spot in the program.</p>
+                    <p class="text-base font-normal text-gray-400">You complete the application so that we are aware of who will be attending.</p>
                   </div>
                 </li>
                 <li class="relative mb-6 sm:mb-0">
@@ -173,7 +184,7 @@
                   <div class="mt-3 sm:pr-8">
                     <h3 class="mb-2 text-lg font-semibold text-gray-100">Presentation</h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-gray-500">At the end of the summer</time>
-                    <p class="text-base font-normal text-gray-400">All students in the Codeventures program will present their projects they have created</p>
+                    <p class="text-base font-normal text-gray-400">All students in the Codeventures program will present their projects they have created.</p>
                   </div>
                 </li>
               </ol>
@@ -271,7 +282,7 @@
         
       </main>
     </div>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js1/main.js"></script>
     <script id="__NEXT_DATA__" type="application/json">
       {
         "props": {
@@ -287,5 +298,4 @@
       }
     </script>
   </body>
-  <!-- Mirrored from www.ethicsincomputing.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 27 May 2024 22:52:34 GMT -->
 </html>
