--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
       </main>
     </div>
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js1/main.js"></script>
     <script id="__NEXT_DATA__" type="application/json">
       {
         "props": {
