--- a/index-2.html
+++ b/index-2.html
@@ -659,10 +659,10 @@ We want this platform to be a space where we can teach kids the basics of coding
 
     </div>
 
-    <script src="js/vendors/alpinejs.min.js" defer></script>
-    <script src="js/vendors/aos.js"></script>
-    <script src="js/vendors/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js1/vendors/alpinejs.min.js" defer></script>
+    <script src="js1/vendors/aos.js"></script>
+    <script src="js1/vendors/swiper-bundle.min.js"></script>
+    <script src="js1/main.js"></script>
 
 </body>
 </html>
