--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
                     </span>
                   </a>
                 </div>
+                <div class="relative group">
+                  <div class="gradient-border"></div>
+                  <a href="index-2.html" target="_blank" class="relative inline-flex items-center h-10 gap-1 px-4 text-sm font-semibold bg-white border divide-x divide-gray-600 rounded-md hover:bg-white/90 focus:ring-2 focus:ring-black/20">
+                    Our Curriculum
+                    <span class="text-[#70757E] animate-point-x">
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13.75 6.75L19.25 12L13.75 17.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M19 12H4.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
               </div>
             </header>
             <div class="max-w-3xl mx-4 md:mx-auto">
