--- a/index-2.html
+++ b/index-2.html
@@ -170,7 +170,7 @@
                                                 <a class="text-slate-800 hover:text-blue-500 transition duration-150 ease-in-out" style="color: #d4f1f4; target="_blank" href="https://docs.google.com/presentation/d/1g4GwJGAls2MjbOxpeR6GpkYusHqo5ysNn_c9yNA5kFM/edit?usp=sharing">Practicing Logic - Week 2</a>
                                             </h3>
                                             <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                                <span class="text-slate-300"></span> Nov 10 <span class="text-slate-300">·</span> Week 2 - 3
+                                                <span class="text-slate-300"></span> Nov 24 - Dec 1 <span class="text-slate-300">·</span> Week 2 - 3
                                             </div>
                                             <div class="text-sm text-slate-500">
                                                 In the second-third week of CodeVentures, we explore the critical importance of practicing and building strong foundational logic in Python programming. We'll discuss key concepts such as conditionals, logical operators, and problem-solving strategies that are essential for any aspiring programmer. Alongside, we highlight real-world scenarios where logical thinking plays a pivotal role in writing efficient and error-free code. Tune in to gain valuable insights into honing your logical skills and mastering the art of programming with Python.
@@ -194,7 +194,7 @@
                                                     </a>
                                             </h3>
                                             <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                                <span class="text-slate-300"></span> Nov 10 <span class="text-slate-300">·</span> Week 4
+                                                <span class="text-slate-300"></span> Dec 8 <span class="text-slate-300">·</span> Week 4
                                             </div>
                                             <div class="text-sm text-slate-500">
                                                 In this week of CodeVentures, we delve into advanced topics in Python programming. Join us as we discuss the manipulation of lists, the utilization of loops for efficient coding, and the power of Python libraries. We'll explain how to effectively use lists to store and manage data, demonstrate various loop constructs to simplify repetitive tasks, and explore essential libraries that extend Python's functionality. Whether you're a beginner or an experienced coder, this episode provides valuable insights and resources to enhance your Python programming skills.
@@ -217,7 +217,7 @@
                                                 <a class="text-slate-800 hover:text-blue-500 transition duration-150 ease-in-out" style="color: #d4f1f4; target="_blank" href="https://docs.google.com/presentation/d/1q-6mo_g7v-g-We-HSOLA9r1L2oEyZb54dm9SlrvGKXg/edit?usp=sharing">Intro to Machine Learning - Weights, Neural Networks, CNN</a>
                                             </h3>
                                             <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                                <span class="text-slate-300"></span> Nov 3 <span class="text-slate-300">·</span> Week 5
+                                                <span class="text-slate-300"></span> Dec 15  <span class="text-slate-300">·</span> Week 5
                                             </div>
                                             <div class="text-sm text-slate-500">
                                                 Welcome to the fifth week of CodeVentures! In this edition, we delve into the foundational concepts of Machine Learning, exploring weights, neural networks, and convolutional neural networks (CNN). We'll break down how these elements work together to form the basis of modern AI, explaining their significance and applications. Whether you're a beginner or looking to deepen your understanding, this episode provides a comprehensive overview to get you started in the world of Machine Learning.
@@ -239,7 +239,7 @@
                                             <a class="text-slate-800 hover:text-blue-500 transition duration-150 ease-in-out" style="color: #d4f1f4; target="_blank" href="https://docs.google.com/presentation/d/1ehUODn2y8sIFTThL3yDGEu4fmvWd2C6lXHuLBPG1AQE/edit?usp=sharing">Intro to Machine Learning 2 - Modules, MatPlotLib, Pandas</a>
                                         </h3>
                                         <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                            <span class="text-slate-300"></span> Oct 20 <span class="text-slate-300">·</span> Week 6
+                                            <span class="text-slate-300"></span> Dec 22 <span class="text-slate-300">·</span> Week 6
                                         </div>
                                         <div class="text-sm text-slate-500">
                                             Welcome to the sixth week of CodeVentures! In this episode, we dive into the essential modules of Machine Learning, focusing on Matplotlib and Pandas. We'll explore how these libraries are used for data visualization and manipulation, providing practical examples and insights to enhance your learning experience. Additionally, we introduce our available lab, equipped with tools and resources to help you experiment and gain hands-on experience with these powerful libraries. Whether you're new to Machine Learning or looking to expand your toolkit, this episode offers valuable knowledge to advance your skills.
@@ -262,7 +262,7 @@
                                             <a class="text-slate-800 hover:text-blue-500 transition duration-150 ease-in-out" style="color: #d4f1f4; target="_blank" href="https://docs.google.com/presentation/d/13cWCNLKYKim7bEKDMEYGY-0l8lwBLnGf2PjNj0Xp13U/edit?usp=sharing">Machine Learning - Types of Regression</a>
                                         </h3>
                                         <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                            <span class="text-slate-300"></span> Aug 18 <span class="text-slate-300">·</span> Week 7
+                                            <span class="text-slate-300"></span> Dec 29 <span class="text-slate-300">·</span> Week 7
                                         </div>
                                         <div class="text-sm text-slate-500">
                                             Welcome to the seventh week of CodeVentures! In this session, we delve into the different types of regression used in Machine Learning. We’ll break down linear regression, polynomial regression, and logistic regression, explaining their applications and how they help in modeling complex relationships in data. Whether you're looking to understand the nuances of these methods or seeking practical tips for implementing them, this episode provides a comprehensive overview to help you build effective predictive models.
@@ -285,7 +285,7 @@
                                                 <a class="text-slate-800 hover:text-blue-500 transition duration-150 ease-in-out" style="color: #d4f1f4; target="_blank" href="https://docs.google.com/presentation/d/13cWCNLKYKim7bEKDMEYGY-0l8lwBLnGf2PjNj0Xp13U/edit#slide=id.g4dfce81f19_0_45">Machine Learning 2 - Types of Regression</a>
                                             </h3>
                                             <div class="font-hkgrotesk font-medium text-sm text-blue-500 mb-1">
-                                                <span class="text-slate-300"></span> Aug 18 <span class="text-slate-300">·</span> Week 8
+                                                <span class="text-slate-300"></span> January 4 <span class="text-slate-300">·</span> Week 8
                                             </div>
                                             <div class="text-sm text-slate-500">
                                                 Welcome to the Final Week of CodeVentures! In this session, we wrap up all that we have learned with a continuation of the regression lesson from last week - a lab on logistic regression by analyzing spam emails and live reviews with a Yelp Sentiment Review Lab.
