--- a/index-2.html
+++ b/index-2.html
@@ -486,13 +486,13 @@ We want this platform to be a space where we can teach kids the basics of coding
                                         </div>
                                     </div>
                                     <div>
-                                        <a class="btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/eshaankaipa/';">
+                                        <a class="btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/trist.pham/';">
                                             @TristanPham <span class="tracking-normal text-blue-300 group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                         </a>
-                                        <a class="btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/naafte/';">
+                                        <a class="btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/aadir8_g/';">
                                             @AadiGarg <span class="tracking-normal text-blue-300 group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                         </a>
-                                        <a class="mt-4 btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/naafte/';">
+                                        <a class="mt-4 btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/rahul.thennarasu/';">
                                             @RahulThennarasu <span class="tracking-normal text-blue-300 group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                         </a>
                                         <a class="mt-4 btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm" onclick="window.location.href='https://www.instagram.com/naafte/';">
