--- a/index-2.html
+++ b/index-2.html
@@ -752,7 +752,7 @@
                                                 class="tracking-normal text-blue-300 group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                         </a>
                                         <a class="mt-4 btn text-white bg-blue-500 hover:bg-blue-600 group shadow-sm"
-                                            onclick="window.location.href='https://www.instagram.com/kars.swam/">
+                                            onclick="window.location.href='https://www.instagram.com/kars.swam/';">
                                             @KarthikKandaswamy <span
                                                 class="tracking-normal text-blue-300 group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                         </a>
